@@ -7,11 +7,11 @@ gem "rake"
 gem "jeweler"
 
 platforms :ruby do
-  gem "sqlite3-ruby"
+  gem "sqlite3"
 end
 
 platforms :jruby do
-  gem "jdbc-sqlite3", :require => "jdbc/sqlite3"
-  gem "activerecord-jdbc-adapter", "1.0.0.beta2"
+  gem "jdbc-sqlite3"
+  gem "activerecord-jdbc-adapter"
   gem "jruby-openssl", :require => false # Silence openssl warnings.
 end
