@@ -11,29 +11,29 @@ module RailsERD
     # join table in the case of many-to-many associations.
     class Relationship
       N = Cardinality::N
-    
+
       class << self
         def from_associations(domain, associations) # @private :nodoc:
           assoc_groups = associations.group_by { |assoc| association_identity(assoc) }
           assoc_groups.collect { |_, assoc_group| new(domain, assoc_group.to_a) }
         end
-      
+
         private
-      
+
         def association_identity(association)
-          identifier = association.options[:join_table] || association.options[:through] || association.primary_key_name.to_s
+          identifier = association.options[:join_table] || association.options[:through] || association.send(Domain.foreign_key_method_name).to_s
           Set[identifier, association_owner(association), association_target(association)]
         end
-        
+
         def association_owner(association)
           association.options[:as] ? association.options[:as].to_s.classify : association.active_record.name
         end
-        
+
         def association_target(association)
           association.options[:polymorphic] ? association.class_name : association.klass.name
         end
       end
-      
+
       extend Inspectable
       inspection_attributes :source, :destination
 
@@ -43,14 +43,14 @@ module RailsERD
       # The source entity. It corresponds to the model that has defined a
       # +has_one+ or +has_many+ association with the other model.
       attr_reader :source
-    
+
       # The destination entity. It corresponds to the model that has defined
       # a +belongs_to+ association with the other model.
       attr_reader :destination
-    
+
       delegate :one_to_one?, :one_to_many?, :many_to_many?, :source_optional?,
         :destination_optional?, :to => :cardinality
-  
+
       def initialize(domain, associations) # @private :nodoc:
         @domain = domain
         @reverse_associations, @forward_associations = *unless any_habtm?(associations)
@@ -61,19 +61,19 @@ module RailsERD
           source = associations.map(&:active_record).sort_by(&:name).first
           associations.partition { |association| association.active_record != source }
         end
-      
+
         assoc = @forward_associations.first || @reverse_associations.first
         @source = @domain.entity_by_name(self.class.send(:association_owner, assoc))
         @destination = @domain.entity_by_name(self.class.send(:association_target, assoc))
         @source, @destination = @destination, @source if assoc.belongs_to?
       end
-    
+
       # Returns all Active Record association objects that describe this
       # relationship.
       def associations
         @forward_associations + @reverse_associations
       end
-    
+
       # Returns the cardinality of this relationship.
       def cardinality
         @cardinality ||= begin
@@ -83,7 +83,7 @@ module RailsERD
           Cardinality.new(reverse_range, forward_range)
         end
       end
-    
+
       # Indicates if a relationship is indirect, that is, if it is defined
       # through other relationships. Indirect relationships are created in
       # Rails with <tt>has_many :through</tt> or <tt>has_one :through</tt>
@@ -91,45 +91,45 @@ module RailsERD
       def indirect?
         !@forward_associations.empty? and @forward_associations.all?(&:through_reflection)
       end
-    
+
       # Indicates whether or not the relationship is defined by two inverse
       # associations (e.g. a +has_many+ and a corresponding +belongs_to+
       # association).
       def mutual?
         @forward_associations.any? and @reverse_associations.any?
       end
-    
+
       # Indicates whether or not this relationship connects an entity with itself.
       def recursive?
         @source == @destination
       end
-    
+
       # Indicates whether the destination cardinality class of this relationship
       # is equal to one. This is +true+ for one-to-one relationships only.
       def to_one?
         cardinality.cardinality_class[1] == 1
       end
-    
+
       # Indicates whether the destination cardinality class of this relationship
       # is equal to infinity. This is +true+ for one-to-many or
       # many-to-many relationships only.
       def to_many?
         cardinality.cardinality_class[1] != 1
       end
-    
+
       # Indicates whether the source cardinality class of this relationship
       # is equal to one. This is +true+ for one-to-one or
       # one-to-many relationships only.
       def one_to?
         cardinality.cardinality_class[0] == 1
       end
-    
+
       # Indicates whether the source cardinality class of this relationship
       # is equal to infinity. This is +true+ for many-to-many relationships only.
       def many_to?
         cardinality.cardinality_class[0] != 1
       end
-    
+
       # The strength of a relationship is equal to the number of associations
       # that describe it.
       def strength
@@ -139,7 +139,7 @@ module RailsERD
       def <=>(other) # @private :nodoc:
         (source.name <=> other.source.name).nonzero? or (destination.name <=> other.destination.name)
       end
-    
+
       private
 
       def associations_range(associations, absolute_max)
@@ -157,7 +157,7 @@ module RailsERD
 
         min..max
       end
-    
+
       def association_minimum(association)
         minimum = association_validators(:presence, association).any? ||
           foreign_key_required?(association) ? 1 : 0
@@ -166,22 +166,22 @@ module RailsERD
       end
 
       def association_maximum(association)
-        maximum = association.collection? ? N : 1      
+        maximum = association.collection? ? N : 1
         length_validators = association_validators(:length, association)
         length_validators.map { |v| v.options[:maximum] }.compact.min or maximum
       end
-    
+
       def association_validators(kind, association)
         association.active_record.validators_on(association.name).select { |v| v.kind == kind }
       end
-    
+
       def any_habtm?(associations)
         associations.any? { |association| association.macro == :has_and_belongs_to_many }
       end
-    
+
       def foreign_key_required?(association)
         if association.belongs_to?
-          column = association.active_record.columns_hash[association.primary_key_name] and !column.null
+          column = association.active_record.columns_hash[association.send(Domain.foreign_key_method_name)] and !column.null
         end
       end
     end
